2007-07-11  Akim Demaille  <demaille@gostai.com>

	Improve dev/ framework
	* dev/tools.py (lazy_install): New.
	* dev/ast-clone-visitor-gen, dev/ast-default-visitor-gen,
	* dev/ast-fwd-gen, dev/ast-graph-gen, dev/ast-nodes-gen,
	* dev/ast-pretty-printer-gen, dev/ast-visitor-gen: Use it.
	Use tools.error to issues errors.
	* dev/ast-nodes-mk-gen: Be like the others: create the file,
	don't output on stdout
	* src/ast/Makefile.am: Adjust.
	Now there is also the stamp system that prevents useless Automake
	invocations.

2007-07-11  Akim Demaille  <demaille@gostai.com>

	Improve messages
	* dev/ast.py: Improve warnings and errors.

2007-07-11  Akim Demaille  <demaille@gostai.com>

	Fix identification
	* configure.ac: .

2007-07-10  Guillaume Deslandes  <deslandes@gostai.com>

	Add parent list and lookup method
	* object-test.cc: Test new features.
	* object.cc (lookup) : New, depth first version.
	(special_slots_dump) : Print parents.
	* object.hh: Add typedefs and methods for parents.
	Add method for lookup.
	* object.hxx (parent_add) : New, add parent to object
	(parent_remove) : New, remove parent from object.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Make debug traces more io like
	* src/object/object.cc (dump): Include the address.

2007-07-09  Guillaume Deslandes  <deslandes@gostai.com>

	* fwd.hh: Add undef for DECLARE.

2007-07-09  Guillaume Deslandes  <deslandes@gostai.com>

	Reorder subdirs in src/Makefile.am
	* Makefile.am: Reorder subdirs, '.' comes firt.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	More object-test
	* src/object/object-test.cc: Strengthen.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Factor print and rename it as dump
	* src/object/atom.cc, src/object/atom.hh, src/object/atom.hxx,
	* src/object/object.cc, src/object/object.hh, src/object/object.hxx
	(print): Rename as...
	(dump): this, to avoid SWIG problems.
	Call special_slots_dump and kind_get
	(special_slots_dump, kind_get): New.
	(prefix): Rename as...